# WiiYourself

./: CMakeLists.txt  wiimote.cpp  wiimote.h  wiimote_common.h  wiimote_state.h
Demo/: CMakeLists.txt  Demo.cpp
Demo/VC2008/: Demo.vcproj
cmake/: FindWDK.cmake
