CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(WiiYourselfDemo)

SET(INSTALL_BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin" 
    CACHE PATH "Installation directory for executables")
SET(INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib" 
    CACHE PATH "Installation directory for libraries")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/..)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/..)

ADD_EXECUTABLE(WiiYourselfDemo Demo.cpp)

TARGET_LINK_LIBRARIES(WiiYourselfDemo WiiYourself winmm) 

INSTALL(TARGETS WiiYourselfDemo
        RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
        ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
        LIBRARY DESTINATION "${INSTALL_LIB_DIR}" )

FILE(GLOB SOUND_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.raw" "${CMAKE_CURRENT_SOURCE_DIR}/*.wav")
INSTALL(FILES ${SOUND_FILES} DESTINATION "${INSTALL_BIN_DIR}")
